--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
+NODE_ENV="development"
 DB_DIALECT="postgresql"
-DB_HOST="localhost"
-DB_USERNAME="postgres"
-DB_PASSWORD="postgres"
-DB_NAME="postgres"
+DB_HOST="34.121.37.167"
+DB_USERNAME="test"
+DB_PASSWORD="izl%V,?>O:ApQ+|A"
+DB_NAME="node-meli-challenge"
+DB_PROVIDER="GCP"
